--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="site-header">
 
-        <img class="profile" src="peace.jpg">
+        <img class="profile" src="https://scontent-del1-1.cdninstagram.com/v/t51.2885-19/s320x320/96865759_2314286732213746_5449834957662846976_n.jpg?tp=1&_nc_ht=scontent-del1-1.cdninstagram.com&_nc_ohc=IT5QnsCmn8IAX9Wfr6m&ccb=7-4&oh=7f9db2bca5edf3ec7f312b7484fb0759&oe=607CFAF9">
         <div class="site-content">
             <h1>
                 Today's mantra
