--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="site-header">
 
-        <img class="profile" src="peace.jpg">
+        <img class="profile" src="peace.jpeg">
         <div class="site-content">
             <h1>
                 Today's mantra
