add: mission & inspiration

--- a/index.html
+++ b/index.html
@@ -32,28 +32,34 @@
         </section>
 
         <section id="about">
-            <header class="about-head -head">
-                <h2>Our Mission</h2>
-            </header>
-            <div class="about-content -content">
-                <p>We started in.notion as an Instagram account for daily inspiration and aesthetic flow of thoughts.</p>
-                <p>Our mission is to spread peace and positivity around.</p>
-                <p>Follow this space for daily inspiration.</p>
+            <img class="frame1" src="./assets/images/stars.png">
+            <div class="box">
+                <header class="about-head -head">
+                    <h2>Our Mission</h2>
+                </header>
+                <div class="about-content -content">
+                    <p>We started in.notion as an Instagram account for daily inspiration and aesthetic flow of thoughts.</p>
+                    <p>Our mission is to spread peace and positivity around.</p>
+                    <p>Follow this space for daily inspiration.</p>
+                </div>
             </div>
+            <img class="frame2" src="./assets/images/clouds.png">
         </section>
 
 
         <section id="inspiration">
-            <header class="inspiration-head -head">
-                <h2>Inspitation</h2>
-            </header>
-            <div class="inspiration-content -content">
-                <h1>
-                    Today's mantra
-                </h1>
-                <h3>
-                    If you're changing the world, you're working on important things. You're excited to get up in the morning.
-                </h3>
+            <div class="box">
+                <header class="inspiration-head -head">
+                    <h2>Inspitation</h2>
+                </header>
+                <div class="inspiration-content -content">
+                    <h3>
+                        Today's mantra
+                    </h3>
+                    <p>
+                        <em>"If you're changing the world, you're working on important things. You're excited to get up in the morning."</em>
+                    </p>
+                </div>
             </div>
         </section>
 
