--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <header class="nav">
         <nav class="navbar">
-            <div class="logo"><img class="logo" src="./assets/images/peace.jpeg" alt="logo"></div>
-            <ul>
+            <div class="logo"><h3>in.notion</h3></div>
+            <div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
+            <ul class="nav-items">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#inspiration">Inspirations</a></li>
