feat: advice API

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                     <p>We started in.notion as an Instagram account for daily inspiration and aesthetic flow of thoughts.</p>
                     <p>Our mission is to spread peace and positivity around.</p>
                     <p>Follow this space for daily inspiration.</p>
+
+                    <h3>
+                        Our Work
+                    </h3>
+                    <a href="https://breather-app.netlify.app/" target="_blank" class="btn btn-primary">&gt; Breather App</a>
                 </div>
             </div>
             <img class="frame2" src="./assets/images/clouds.png">
@@ -60,6 +65,13 @@
                     <p>
                         <em>"If you're changing the world, you're working on important things. You're excited to get up in the morning."</em>
                     </p>
+                    <h3>
+                        Advice for you
+                    </h3>
+                    <p>
+                        <em class="advice"></em>
+                    </p>
+                    <button class="advice-btn btn btn-primary">New Advice</button>
                 </div>
             </div>
         </section>
